# adlisac

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  REQUIREMENTS.md  smearor.gpl
adlisac-core/: Cargo.toml
adlisac-core/src/: error.rs  lib.rs  process.rs
adlisac-core/src/state/: base.rs  client.rs  compositor.rs  layer_shell.rs  mod.rs  seat.rs  shm.rs  xdg_shell.rs
adlisac-gtk/: Cargo.toml
adlisac-gtk/src/: compositor.rs  event.rs  lib.rs  render_node.rs  source.rs  source.rs.bak
adlisac-rotation/: Cargo.toml
adlisac-rotation/src/: lib.rs
adlisac-wrapper/: Cargo.toml
adlisac-wrapper/src/: args.rs  main.rs
casilda/: Cargo.toml  Gir.toml
casilda-wrapper/: Cargo.toml
casilda-wrapper/src/: layout.rs  main.rs  rotation.rs
casilda/casilda-sys/: Cargo.toml  Gir.toml  build.rs
casilda/casilda-sys/src/: lib.rs
casilda/casilda-sys/src/auto/: versions.txt
casilda/casilda-sys/tests/: abi.rs  constant.c  layout.c  manual.h
casilda/examples/: simple.rs
casilda/src/: lib.rs  spawn_async.rs
casilda/src/auto/: compositor.rs  mod.rs  versions.txt
