[workspace]
resolver = "3"

members = [
    "casilda",
    "casilda/casilda-sys"
]


[workspace.package]
version = "1.0.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/smearor/casilda-rs"
homepage = "https://smearor.io/"
rust-version = "1.87.0"

[workspace.dependencies]
glib = "0.22"
glib-sys = "0.22"
gobject-sys = "0.22"
gdk4 = "0.11"
gdk4-sys = "0.11"
gtk4 = "0.11"
gtk4-sys = "0.11"
libc = "0.2"
shell-words = "1.1"
system-deps = "7.0"
tempfile = "3"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

#
