[package]
name = "adlisac-rotation"
description = "Adlisac"
version = { workspace = true }
edition = { workspace = true }
readme = "../README.md"

[dependencies]
glib = { workspace = true, features = ["v2_66"] }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
#thiserror = { workspace = true }
#tracing = { workspace = true }

[features]
