[package]
name = "adlisac-wrapper"
description = "Binary wrapper for adlisac"
version = { workspace = true }
edition = { workspace = true }
readme = "../README.md"

[dependencies]
adlisac-core = { path = "../adlisac-core" }
adlisac-rotation = { path = "../adlisac-rotation" }
adlisac-gtk = { path = "../adlisac-gtk" }
clap = { workspace = true, features = ["derive"] }
glib = { workspace = true, features = ["v2_66"] }
gdk4 = { workspace = true }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[features]

[[bin]]
name = "adlisac-wrapper"
path = "src/main.rs"
