[package]
name = "casilda-wrapper"
description = "Casilda"
version = { workspace = true }
edition = { workspace = true }
readme = "../README.md"

[dependencies]
casilda = { path = "../casilda" }
glib = { workspace = true, features = ["v2_66"] }
gdk4 = { workspace = true }
gtk4 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]

[[bin]]
name = "casida-wrapper"
path = "src/main.rs"
