[package]
name = "casilda"
description = "Casilda"
version = { workspace = true }
edition = { workspace = true }
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bitflags = "2.11"
ffi = { package = "casilda-sys", path = "./casilda-sys" }
glib = { workspace = true, features = ["v2_66"] }
gdk4 = { workspace = true }
gtk4 = { workspace = true }
libc = { workspace = true }

[features]

[[example]]
name = "simple"