[package]
name = "casilda-sys"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[package.metadata.system-deps]
"casilda-1.0" = { version = "1.0" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "casilda_sys"

[dependencies]
libc = { workspace = true }
glib-sys = { workspace = true }
gobject-sys = { workspace = true }
gdk4-sys = { workspace = true }
gtk4-sys = { workspace = true }

[build-dependencies]
system-deps = { workspace = true }

[dev-dependencies]
shell-words = { workspace = true }
tempfile = { workspace = true }

[features]
